new website completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- css link -->
     <link rel="stylesheet" href="./css/main.css" />
+    <!-- icon link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>CarTrade</title>
   </head>
   <body>
@@ -760,5 +768,169 @@
       </div>
     </section>
     <!-- blog section ends -->
+    <!-- hero section stats -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero__wrapper">
+          <div class="hero__card hero__card1">
+            <h2 class="hero__title title">Are You Looking For a Car ?</h2>
+            <p class="hero__description section__styles">
+              We are committed to providing our customers with exceptional
+              service.
+            </p>
+            <button class="hero__btn hero__btn1">
+              Get Started <img src="./images/about-3.svg" alt="hero img" />
+            </button>
+            <img class="hero__img" src="./images/hero-1.svg" alt="hero img" />
+          </div>
+          <div class="hero__card hero__card2">
+            <h2 class="hero__title title">Do You Want to Sell a Car ?</h2>
+            <p class="hero__description section__styles">
+              We are committed to providing our customers with exceptional
+              service.
+            </p>
+            <button class="hero__btn hero__btn2">
+              Get Started <img src="./images/about-3.svg" alt="hero img" />
+            </button>
+            <img class="hero__img" src="./images/hero-2.svg" alt="hero img" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- hero section ends -->
+    <!-- footer section starts -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <div class="footer__top--left">
+              <h2 class="footer__title">Join BoxCar</h2>
+              <p class="footer__p section__styles">
+                Receive pricing updates, shopping tips & more!
+              </p>
+            </div>
+            <form class="footer__form">
+              <input
+                class="footer__input section__styles"
+                type="email"
+                placeholder="Your email address"
+              />
+              <button class="footer__btn">Sign Up</button>
+            </form>
+          </div>
+          <div class="footer__medium">
+            <div class="footer__list">
+              <h3 class="footer__list--title">Company</h3>
+              <ul class="footer__ul">
+                <li class="footer__li">About Us</li>
+                <li class="footer__li">Blog</li>
+                <li class="footer__li">Services</li>
+                <li class="footer__li">FAQs</li>
+                <li class="footer__li">Terms</li>
+                <li class="footer__li">Contact Us</li>
+              </ul>
+            </div>
+            <div class="footer__list">
+              <h3 class="footer__list--title">Quick Links</h3>
+              <ul class="footer__ul">
+                <li class="footer__li">Get in Touch</li>
+                <li class="footer__li">Help center</li>
+                <li class="footer__li">Live chat</li>
+                <li class="footer__li">Services</li>
+                <li class="footer__li">How it works</li>
+              </ul>
+            </div>
+            <div class="footer__list">
+              <h3 class="footer__list--title">Our Brands</h3>
+              <ul class="footer__ul">
+                <li class="footer__li">Toyota</li>
+                <li class="footer__li">Porsche</li>
+                <li class="footer__li">Audi</li>
+                <li class="footer__li">BMW</li>
+                <li class="footer__li">Ford</li>
+                <li class="footer__li">Nissan</li>
+                <li class="footer__li">Peugeot</li>
+                <li class="footer__li">Volkswagen</li>
+              </ul>
+            </div>
+            <div class="footer__list">
+              <h3 class="footer__list--title">Vehicles Type</h3>
+              <ul class="footer__ul">
+                <li class="footer__li">Sedan</li>
+                <li class="footer__li">Hatchback</li>
+                <li class="footer__li">SUV</li>
+                <li class="footer__li">Hybrid</li>
+                <li class="footer__li">Electric</li>
+                <li class="footer__li">Coupe</li>
+                <li class="footer__li">Truck</li>
+                <li class="footer__li">Convertible</li>
+              </ul>
+            </div>
+            <div class="footer__card">
+              <h3 class="footer__list--title">Our Mobile App</h3>
+
+              <button class="footer__card--btn">
+                <i class="fa-brands fa-apple"></i>
+                <a href="https://www.apple.com/app-store/" target="_blank">
+                  <h4 class="footer__card--subtitle">Download on the</h4>
+                  <h3 class="footer__card--title section__styles">
+                    Apple Store
+                  </h3></a
+                >
+              </button>
+
+              <button class="footer__card--btn">
+                <i class="fa-brands fa-google-play"></i>
+                <a href="https://play.google.com/" target="_blank">
+                  <h4 class="footer__card--subtitle">Get in on</h4>
+                  <h3 class="footer__card--title section__styles">
+                    Google Play
+                  </h3></a
+                >
+              </button>
+              <h3 class="footer__list--title">Connect With Us</h3>
+              <div class="footer__icons">
+                <a
+                  class="footer__icon"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+                <a class="footer__icon" href="https://x.com/" target="_blank"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+                <a
+                  class="footer__icon"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a
+                  class="footer__icon"
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <div class="footer__bottom--left">
+              <h4 class="footer__bottom--title section__styles">
+                © 2024 exemple.com. All rights reserved.
+              </h4>
+              <p class="footer__bottom--p section__styles">
+                Terms & Conditions
+                <span class="footer__bottom--span"></span> Privacy Notice
+              </p>
+            </div>
+            <button class="footer__bottom--btn">
+              <a href="#"> <i class="fa-solid fa-arrow-up"></i></a>
+            </button>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section ends -->
   </body>
 </html>
